classDiagram
    class Customer {
        -String _name
        -Transaction _currentTransaction
        -List~Transaction~ _pastTransactions
        +getName()
        +getCurrentTransaction()
        +getPastTransactions()
        +order()
    }

    class FoodItem {
        -String _name
        -Float _price
        -String _category
        -Float _rating
        +getName()
        +getPrice()
        +getCategory()
        +getRating()
        +setPrice()
        +setRating()
    }

    class Catalog {
        -String _name
        -List~FoodItem~ _items
        +getName()
        +getItems()
        +addItem()
        +removeItem()
        +filterByCategory()
    }

    class Transaction {
        -List~FoodItem~ _items
        -Float _totalCost
        +getItems()
        +getTotalCost()
        +addItem()
        +removeItem()
    }

    Customer "1" --> "0..1" Transaction : _currentTransaction
    Customer "1" --> "0..*" Transaction : _pastTransactions
    Transaction "1" o-- "1..*" FoodItem : _items
    Catalog "1" *-- "0..*" FoodItem : _items
